[gd_scene load_steps=22 format=3 uid="uid://b6gw6ltmrw7rf"]

[ext_resource type="Script" path="res://scripts/menu_new.gd" id="1_s7kyc"]
[ext_resource type="Shader" path="res://Shaders/blur_shader.gdshader" id="2_ohqbn"]
[ext_resource type="Script" path="res://scripts/Inventario.gd" id="2_tx7fw"]
[ext_resource type="Script" path="res://scripts/personagem_card.gd" id="3_en08p"]
[ext_resource type="Script" path="res://scripts/inventario_action.gd" id="3_ry7py"]
[ext_resource type="Script" path="res://scripts/Modificar_Menu.gd" id="3_t3uft"]
[ext_resource type="Script" path="res://scripts/Equipar.gd" id="4_b7lxm"]
[ext_resource type="Script" path="res://scripts/Habilidades.gd" id="5_3felb"]
[ext_resource type="Script" path="res://scripts/Itens.gd" id="5_enwq6"]
[ext_resource type="Script" path="res://scripts/Mochila.gd" id="6_xjoki"]
[ext_resource type="Script" path="res://scripts/Opcoes.gd" id="7_ww8ya"]
[ext_resource type="Script" path="res://scripts/Idioma_Label.gd" id="8_8tjnw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dw2mx"]
shader = ExtResource("2_ohqbn")
shader_parameter/lod = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_injrq"]
bg_color = Color(0.6, 0.6, 0.6, 0.290196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fww2j"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56asb"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kn4ql"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y7im"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsu88"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dd4fg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nrgnf"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7kyc")

[node name="Layout_Maior" type="Panel" parent="."]
material = SubResource("ShaderMaterial_dw2mx")
layout_mode = 2
offset_left = -53.0
offset_top = -34.0
offset_right = 1180.0
offset_bottom = 687.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_injrq")

[node name="Modificar_Menu" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 115.0
offset_top = 348.0
offset_right = 1027.0
offset_bottom = 623.0
script = ExtResource("3_t3uft")

[node name="Caleb" type="Panel" parent="Modificar_Menu"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
script = ExtResource("3_en08p")
name_personagem = "Caleb"

[node name="child" type="Label" parent="Modificar_Menu/Caleb"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Morgana" type="Panel" parent="Modificar_Menu"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
script = ExtResource("3_en08p")
name_personagem = "Morgana"

[node name="child" type="Label" parent="Modificar_Menu/Morgana"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Darcy" type="Panel" parent="Modificar_Menu"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
script = ExtResource("3_en08p")
name_personagem = "Darcy"

[node name="child" type="Label" parent="Modificar_Menu/Darcy"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Dotty" type="Panel" parent="Modificar_Menu"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
script = ExtResource("3_en08p")
name_personagem = "Dotty"

[node name="child" type="Label" parent="Modificar_Menu/Dotty"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Mochila_Options" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -164.0
offset_right = 451.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_enwq6")

[node name="Consumiveis" type="Panel" parent="Mochila_Options"]
custom_minimum_size = Vector2(301, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_fww2j")
script = ExtResource("3_ry7py")
inventario = "Consumiveis"

[node name="LabelTitlePT" type="RichTextLabel" parent="Mochila_Options/Consumiveis"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -30.5
offset_right = 123.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Consumiveis"
scroll_active = false

[node name="LabelTitleEN" type="RichTextLabel" parent="Mochila_Options/Consumiveis"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -30.5
offset_right = 81.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Supplies"
scroll_active = false

[node name="ItensChave" type="Panel" parent="Mochila_Options"]
custom_minimum_size = Vector2(301, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_56asb")
script = ExtResource("3_ry7py")
inventario = "ItensChave"

[node name="LabelTitlePT" type="RichTextLabel" parent="Mochila_Options/ItensChave"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -30.5
offset_right = 112.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Itens Chave"
scroll_active = false

[node name="LabelTitleEN" type="RichTextLabel" parent="Mochila_Options/ItensChave"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -30.0
offset_right = 100.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Key Itens"
scroll_active = false

[node name="Equipaveis" type="Panel" parent="Mochila_Options"]
custom_minimum_size = Vector2(301, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kn4ql")
script = ExtResource("3_ry7py")
inventario = "Equipaveis"

[node name="LabelTitlePT" type="RichTextLabel" parent="Mochila_Options/Equipaveis"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -30.5
offset_right = 106.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Equipaveis"
scroll_active = false

[node name="LabelTitleEN" type="RichTextLabel" parent="Mochila_Options/Equipaveis"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.5
offset_right = 100.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Gear Itens"
scroll_active = false

[node name="Inventario" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -164.0
offset_right = 451.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_tx7fw")

[node name="Container" type="Panel" parent="Inventario"]
custom_minimum_size = Vector2(450, 420)
layout_mode = 0
offset_left = 460.0
offset_right = 910.0
offset_bottom = 420.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4y7im")

[node name="ItensPanel" type="ScrollContainer" parent="Inventario/Container"]
custom_minimum_size = Vector2(430, 400)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 445.0
offset_bottom = 415.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Itens" type="VBoxContainer" parent="Inventario/Container/ItensPanel"]
custom_minimum_size = Vector2(440, 410)
layout_mode = 2

[node name="Descricao" type="Panel" parent="Inventario"]
custom_minimum_size = Vector2(450, 420)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4y7im")

[node name="TextureRect" type="TextureRect" parent="Inventario/Descricao"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -170.0
offset_right = 115.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Inventario/Descricao"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = 69.0
offset_right = 215.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 119.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 40
autowrap_mode = 2

[node name="ContainerMenu_1" type="Panel" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 52.0
offset_right = 1027.0
offset_bottom = 154.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rsu88")

[node name="Menu_1" type="HBoxContainer" parent="ContainerMenu_1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -546.0
offset_top = 33.0
offset_right = 556.0
offset_bottom = 73.0
grow_horizontal = 2
alignment = 1

[node name="Equipar" type="Panel" parent="ContainerMenu_1/Menu_1"]
layout_mode = 2
script = ExtResource("4_b7lxm")

[node name="pt" type="RichTextLabel" parent="ContainerMenu_1/Menu_1/Equipar"]
visible = false
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
offset_left = -380.0
offset_right = -180.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Equipar"
scroll_active = false

[node name="en" type="RichTextLabel" parent="ContainerMenu_1/Menu_1/Equipar"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
offset_left = -380.0
offset_right = -180.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Equip"
scroll_active = false

[node name="Habilidades" type="Panel" parent="ContainerMenu_1/Menu_1"]
layout_mode = 2
script = ExtResource("5_3felb")

[node name="pt" type="RichTextLabel" parent="ContainerMenu_1/Menu_1/Habilidades"]
visible = false
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
offset_left = -210.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Habilidades"
scroll_active = false

[node name="en" type="RichTextLabel" parent="ContainerMenu_1/Menu_1/Habilidades"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
offset_left = -176.0
offset_right = 74.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Skills"
scroll_active = false

[node name="Mochila" type="Panel" parent="ContainerMenu_1/Menu_1"]
layout_mode = 2
script = ExtResource("6_xjoki")

[node name="pt" type="RichTextLabel" parent="ContainerMenu_1/Menu_1/Mochila"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = 20.0
offset_right = 220.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Mochila"
scroll_active = false

[node name="en" type="RichTextLabel" parent="ContainerMenu_1/Menu_1/Mochila"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = -10.0
offset_right = 190.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Bagpack"
scroll_active = false

[node name="Opcoes" type="Panel" parent="ContainerMenu_1/Menu_1"]
layout_mode = 2
script = ExtResource("7_ww8ya")

[node name="pt" type="RichTextLabel" parent="ContainerMenu_1/Menu_1/Opcoes"]
visible = false
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
offset_left = 220.0
offset_right = 420.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Opções"
scroll_active = false

[node name="en" type="RichTextLabel" parent="ContainerMenu_1/Menu_1/Opcoes"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
offset_left = 220.0
offset_right = 420.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Options"
scroll_active = false

[node name="Money" type="Panel" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 160.0
offset_right = 1027.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dd4fg")

[node name="Label" type="Label" parent="Money"]
layout_mode = 0
offset_left = 18.0
offset_top = 4.0
offset_right = 114.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 23
text = "$2000"
horizontal_alignment = 1

[node name="Options" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(910, 420)
layout_mode = 0
offset_left = 117.0
offset_top = 160.0
offset_right = 1017.0
offset_bottom = 580.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nrgnf")

[node name="opcoes_box" type="VBoxContainer" parent="Options"]
layout_mode = 0
offset_left = 6.0
offset_top = 8.0
offset_right = 522.0
offset_bottom = 412.0

[node name="Idioma_Label" type="Panel" parent="Options/opcoes_box"]
layout_mode = 2
script = ExtResource("8_8tjnw")

[node name="pt" type="RichTextLabel" parent="Options/opcoes_box/Idioma_Label"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 0
offset_left = 7.0
offset_top = -2.0
offset_right = 892.0
offset_bottom = 38.0
theme_override_font_sizes/normal_font_size = 30
text = "Idioma: Português(Brasil)"
scroll_active = false

[node name="en" type="RichTextLabel" parent="Options/opcoes_box/Idioma_Label"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 0
offset_left = 7.0
offset_top = -2.0
offset_right = 896.0
offset_bottom = 38.0
theme_override_font_sizes/normal_font_size = 30
text = "Language: English"
scroll_active = false
